--- a/backend/Lifenote.Application/Lifenote.Application.csproj
+++ b/backend/Lifenote.Application/Lifenote.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Lifenote.Core\Lifenote.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Queries\" />
+  </ItemGroup>
+
 </Project>
