refactor: backend structure

--- a/backend/Lifenote.API/Lifenote.API.csproj
+++ b/backend/Lifenote.API/Lifenote.API.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5">
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.16" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.7">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
@@ -15,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Lifenote.Application\Lifenote.Application.csproj" />
-    
+    <ProjectReference Include="..\Lifenote.Core\Lifenote.Core.csproj" />
+    <ProjectReference Include="..\Lifenote.Data\Lifenote.Data.csproj" />
   </ItemGroup>
 
 </Project>
