feat: note related apis

--- a/backend/Lifenote.API/appsettings.json
+++ b/backend/Lifenote.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=lifenote;Username=postgres;Password=post123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
