--- a/backend/Lifenote.Data/Lifenote.Data.csproj
+++ b/backend/Lifenote.Data/Lifenote.Data.csproj
@@ -8,6 +8,10 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
