--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "^20.3.16",
     "@angular/router": "^20.3.16",
     "@tailwindcss/postcss": "^4.1.11",
+    "highlight.js": "^11.11.1",
     "lucide": "^0.535.0",
     "lucide-angular": "^0.535.0",
+    "marked": "^17.0.1",
     "postcss": "^8.5.6",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
@@ -33,6 +35,7 @@
     "@angular/cli": "^20.3.15",
     "@angular/compiler-cli": "^20.3.16",
     "@types/jasmine": "~5.1.0",
+    "@types/marked": "^5.0.2",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
