--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -33,9 +33,17 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/highlight.js/styles/atom-one-dark.css"
+              "node_modules/prismjs/themes/prism-okaidia.css",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css",
+              "node_modules/prismjs/plugins/command-line/prism-command-line.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-csharp.min.js",
+              "node_modules/prismjs/components/prism-css.min.js",
+              "node_modules/prismjs/plugins/command-line/prism-command-line.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -97,10 +105,19 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.scss"
+           "styles": [
+              "src/styles.scss",
+              "node_modules/prismjs/themes/prism-okaidia.css",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css",
+              "node_modules/prismjs/plugins/command-line/prism-command-line.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-csharp.min.js",
+              "node_modules/prismjs/components/prism-css.min.js",
+              "node_modules/prismjs/plugins/command-line/prism-command-line.js"
+            ]
           }
         }
       }
