--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,8 +23,10 @@
     "highlight.js": "^11.11.1",
     "lucide": "^0.535.0",
     "lucide-angular": "^0.535.0",
-    "marked": "^17.0.1",
+    "marked": "^16.0.0",
+    "ngx-markdown": "^20.1.0",
     "postcss": "^8.5.6",
+    "prismjs": "^1.30.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.11",
     "tslib": "^2.3.0",
