--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "^20.3.16",
     "@angular/router": "^20.3.16",
     "@tailwindcss/postcss": "^4.1.11",
+    "clipboard": "^2.0.11",
     "highlight.js": "^11.11.1",
     "lucide": "^0.535.0",
     "lucide-angular": "^0.535.0",
